# openbb-alpaca

./: .env.example  .gitignore  README.md  pyproject.toml
openbb_alpaca/: __init__.py  utils.py
openbb_alpaca/models/: __init__.py  crypto_historical.py  equity_historical.py
tests/: conftest.py  test_crypto_historical.py  test_equity_historical.py  test_utils.py
