[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openbb-alpaca"
version = "0.1.0"
description = "Alpaca provider extension for OpenBB (equity + crypto historical pricing)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = ["openbb-core>=1.5.8"]

# Registers the `alpaca` provider with OpenBB's plugin system.
[project.entry-points."openbb_provider_extension"]
alpaca = "openbb_alpaca:alpaca_provider"

[tool.setuptools.packages.find]
include = ["openbb_alpaca*"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", "__pycache__", "*.egg-info", "build", "dist", "tests/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
ignore = [
    # Import-outside-toplevel is intentional: lazy imports avoid loading
    # heavy deps at module-import time.
    "PLC0415",
]
